--- a/Python_Diameter/readme
+++ b/Python_Diameter/readme
@@ -1,2 +1,9 @@
 
 Currently, I am using ReactCodeAgent for the Diameter calculation. I have also added the output I am getting 
+
+Files for execution:
+- main.py  (contains tools and agent code)
+- sp.py    (system prompt file)
+- prompts.py  (User Prompt given to LLM)
+- fastener_toolkit.py  (Fastenating file)
+- Output.md  (Output given by LLM)
